syntax = "proto3";

option go_package = "github.com/dorm-parcel-manager/dpm/common/pb";

package pb;

import "common.proto";
import "google/protobuf/timestamp.proto";

service ParcelService {
  rpc Hello (HelloRequest) returns (HelloResponse) {}
  rpc GetParcels (GetParcelsRequest) returns (GetParcelsResponse) {}
  rpc StudentGetParcels (StudentGetParcelsRequest) returns (StudentGetParcelsResponse) {}
  rpc StaffGetParcels (StaffGetParcelsRequest) returns (StaffGetParcelsResponse) {}
  rpc GetParcel (GetParcelRequest) returns (GetParcelResponse) {}
  rpc CreateParcel (CreateParcelRequest) returns (Empty) {}
  rpc UpdateParcel (UpdateParcelRequest) returns (Empty) {}
  rpc DeleteParcel (DeleteParcelRequest) returns (Empty) {}
  rpc StaffAcceptDelivery (StaffAcceptDeliveryRequest) returns (Empty) {}
  rpc StudentClaimParcel (StudentClaimParcelRequest) returns (Empty) {}
}

message Parcel {
  int32 id = 1;
  int32 owner_id = 2;
  optional google.protobuf.Timestamp arrival_date = 3;
  optional google.protobuf.Timestamp picked_up_date = 4;
  string name = 5;
  string transport_company = 6;
  string tracking_number = 7;
  string sender = 8;
  string description = 9;
  ParcelStatus status = 10;

  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

enum ParcelStatus {
  PARCEL_REGISTERED = 0;
  PARCEL_ARRIVED = 1;
  PARCEL_PICKED_UP = 2;
}

message GetParcelsRequest {
  Context context = 1;
  GetParcelsData data = 2;
}

message GetParcelsData {
  optional string transport_company = 1;
  optional string tracking_number = 2;
  optional string sender = 3;
  optional ParcelStatus status = 4;
}

message GetParcelsResponse {
  repeated Parcel parcels = 1;
}

message StudentGetParcelsRequest {
  Context context = 1;
}

message StudentGetParcelsResponse {
  repeated Parcel parcels = 1;
}

message StaffGetParcelsRequest {
  Context context = 1;
  StaffGetParcelsData data = 2;
}

message StaffGetParcelsData {
  optional string transport_company = 1;
  optional string tracking_number = 2;
  optional string sender = 3;
}

message StaffGetParcelsResponse {
  repeated Parcel parcels = 1;
}

message GetParcelRequest {
  Context context = 1;
  uint32 id = 2;
}

message GetParcelResponse {
  Parcel parcel = 1;
}

message CreateParcelRequest {
  Context context = 1;
  CreateParcelData data = 3;
}

message CreateParcelData {
  int32 owner_id = 1;
  string name = 2;
  string transport_company = 3;
  string tracking_number = 4;
  string sender = 5;
}

message UpdateParcelRequest {
  Context context = 1;
  uint32 id = 2;
  UpdateParcelData data = 3;
}

message UpdateParcelData {
  optional int32 owner_id = 1;
  optional google.protobuf.Timestamp arrival_date = 2;
  optional google.protobuf.Timestamp picked_up_date = 3;
  optional string name = 4;
  optional string transport_company = 5;
  optional string tracking_number = 6;
  optional string sender = 7;
  optional ParcelStatus status = 8;
  optional string description = 9;
}

message DeleteParcelRequest {
  Context context = 1;
  uint32 id = 2;
}

message StaffAcceptDeliveryRequest {
  Context context = 1;
  uint32 id = 2;
  StaffAcceptDeliveryData data = 3;
}

message StaffAcceptDeliveryData {
  string description = 1;
}

message StudentClaimParcelRequest {
  Context context = 1;
  uint32 id = 2;
}
